<resources>
    <string name="app_name">HiChat</string>

    <string name="app_name_with_connection_status">HiChat（%s）</string>

    <string name="ok">确定</string>
    <string name="cancel">取消</string>

    <string name="text_login">登 录</string>
    <string name="text_hint_input_account">请输入账户</string>
    <string name="text_hint_input_password">请输入密码</string>
    <string name="text_hint_input_email">请输入邮件</string>
    <string name="text_hint_input_code">请输入验证码</string>
    <string name="text_get_code">获取验证码</string>

    <string name="text_main_chat">Chat</string>
    <string name="text_main_contacts">Contacts</string>
    <string name="text_main_groups">Groups</string>
    <string name="text_main_me">Me</string>
    <string name="text_main_test">Test</string>

    <string name="text_add_conversation">Add conversation</string>

    <string name="toast_net_error_timeout">请求超时,请稍后重试</string>
    <string name="toast_net_error_http">请求出错,请稍后重试</string>
    <string name="toast_net_error_default">请求出错,请稍后重试或者检查网络状态</string>

    <string name="text_send">发送</string>

    <string name="text_nick">昵称</string>
    <string name="text_save">保存</string>
    <string name="text_message_notify">消息通知</string>

    <string name="text_register">注册</string>
    <string name="text_hint_input_nick">请输入昵称</string>

    <string name="text_settings">设置</string>
</resources>
