<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dimen_24"
        android:paddingRight="@dimen/dimen_24">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48">

            <com.barran.lib.view.text.LimitEditText
                android:id="@+id/activity_register_edit_account"
                style="@style/LoginEditTextStyle"
                android:layout_alignParentBottom="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="@dimen/dimen_6"
                android:drawableLeft="@drawable/account"
                android:drawablePadding="@dimen/dimen_6"
                android:hint="@string/text_hint_input_account"
                android:maxLength="20" />

        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48">

            <com.barran.lib.view.text.LimitEditText
                android:id="@+id/activity_register_edit_password"
                style="@style/LoginEditTextStyle"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/dimen_8"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="@dimen/dimen_6"
                android:hint="@string/text_hint_input_password"
                android:inputType="textPassword"
                android:maxLength="20" />

            <ImageView
                android:id="@+id/activity_register_image_hide_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:layout_marginBottom="@dimen/dimen_8"
                android:src="@drawable/password_hidden" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.barran.lib.view.text.LimitEditText
                android:id="@+id/activity_register_edit_email"
                style="@style/LoginEditTextStyle"
                android:layout_width="0dp"
                android:layout_marginBottom="@dimen/dimen_8"
                android:layout_weight="1"
                android:drawableStart="@drawable/password"
                android:drawablePadding="@dimen/dimen_6"
                android:hint="@string/text_hint_input_email"
                android:inputType="textEmailAddress"
                android:maxLength="20" />

            <Button
                android:id="@+id/btn_get_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_get_code" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48">

            <com.barran.lib.view.text.LimitEditText
                android:id="@+id/activity_register_edit_code"
                style="@style/LoginEditTextStyle"
                android:layout_alignParentBottom="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="@dimen/dimen_6"
                android:drawableStart="@drawable/account"
                android:drawablePadding="@dimen/dimen_6"
                android:inputType="number"
                android:hint="@string/text_hint_input_code"
                android:maxLength="20" />

        </RelativeLayout>


        <com.barran.lib.view.text.ColorfulTextView
            android:id="@+id/fragment_pwd_register_tv_submit"
            style="@style/BottomWholeWidthPartnerBlueSolidButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_32"
            android:enabled="false"
            android:text="@string/text_register"
            android:textColor="@android:color/white"
            app:bgRoundRadius="true" />

    </LinearLayout>

</LinearLayout>